Intregates and wraps PME funcitonality for project version calculation and remote calls to DA