@@ -1,5 +1,9 @@
 scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+  Seq(
+    "-Xmx1024M",
+    "-Dplugin.version=" + version.value,
+    "-Dsbt.boot.properties=./sbt.boot.properties"
+  )
 }
 
 scriptedBufferLog := false
